# ai_autonomous_engineering

./: .env.example  .gitignore  FULL UPGRADE PLAN.txt  README.md  pyproject.toml
SWE-AF-main/: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Makefile  SECURITY.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  railway.toml  requirements-docker.txt  requirements.txt
SWE-AF-main/examples/diagrams/: .gitignore  Cargo.toml  README.md  analyze_bi.py  analyze_pipeline.py  analyze_v2.py  render_charts.js  visualize.py
SWE-AF-main/examples/diagrams/src/: app.rs  ascii.rs  cli.rs  error.rs  layout.rs  lexer.rs  lib.rs  main.rs  parser.rs  svg.rs  types.rs  validator.rs
SWE-AF-main/examples/diagrams/test_examples/: 01_basic.dsl  02_microservices.dsl  03_data_pipeline.dsl  04_comments_only.dsl  05_invalid_syntax.dsl  06_undefined_ref.dsl  07_all_node_types.dsl  build_and_test.sh  run_tests.sh
SWE-AF-main/examples/diagrams/tests/: integration.rs  scaffolding_test.rs  test_app_pipeline_integration.rs  test_full_pipeline_integration.rs  test_layout_algorithm_fixed.rs  test_layout_conflict_resolution.rs  test_merged_features_interaction.rs  test_parser_integration.rs  test_renderer_layout_integration.rs  test_types.rs
SWE-AF-main/examples/llm-rust-python-compiler-sonnet/crates/llm-pyexec/: Cargo.toml
SWE-AF-main/examples/llm-rust-python-compiler-sonnet/crates/llm-pyexec/benches/: pyexec_bench.rs
SWE-AF-main/examples/llm-rust-python-compiler-sonnet/crates/llm-pyexec/src/: cache.rs  executor.rs  lib.rs  modules.rs  output.rs  pool.rs  timeout.rs  types.rs  vm.rs
SWE-AF-main/examples/llm-rust-python-compiler-sonnet/crates/llm-pyexec/tests/: cache_correctness.rs  executor_integration.rs  perf_warm.rs  pool_correctness.rs  smoke_test.rs  test_cache_vm_allowlist_integration.rs  test_executor_pool_cache_integration.rs  test_output_modules_lib_integration.rs  test_pool_cache_executor_integration.rs  test_types_timeout_integration.rs  test_vm_output_modules_timeout_integration.rs
SWE-AF-main/examples/llm-rust-python-compiler-sonnet/crates/llm-pyexec/tests/integration/: main.rs
SWE-AF-main/examples/pyrust/: .gitignore  Cargo.toml  LICENSE  README.md
SWE-AF-main/examples/pyrust/.cargo/: config.toml
SWE-AF-main/examples/pyrust/benches/: binary_subprocess.rs  cache_performance.rs  compiler_benchmarks.rs  cpython_baseline.rs  cpython_pure_execution.rs  daemon_mode.rs  execution_benchmarks.rs  function_call_overhead.rs  lexer_benchmarks.rs  parser_benchmarks.rs  profiling_overhead.rs  startup_benchmarks.rs  vm_benchmarks.rs
SWE-AF-main/examples/pyrust/docs/: README.md  implementation-notes.md  integration-verification.md  performance.md  test-verification.md  validation.md
SWE-AF-main/examples/pyrust/scripts/: check_binary_subprocess_cv.sh  compare_cpython.sh  compare_pure_execution.sh  daemon_stress_test.sh  final_validation.sh  measure_binary_startup.sh  validate_benchmark_stability.sh  validate_binary_speedup.sh  validate_cache_performance.sh  validate_daemon_speedup.sh  validate_prd_acceptance_criteria.sh  validate_speedup.sh  validate_test_status.sh
SWE-AF-main/examples/pyrust/src/: ast.rs  bytecode.rs  cache.rs  compiler.rs  daemon.rs  daemon_client.rs  daemon_protocol.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  profiling.rs  value.rs  vm.rs
SWE-AF-main/examples/pyrust/tests/: allocation_count_test.rs  benchmark_validation.rs  conflict_resolution_test.rs  integration_test.rs  manual_test_results.md  test_acceptance_criteria_coverage.sh  test_benchmark_stability_ac44.rs  test_benchmark_stability_validation.rs  test_binary_optimization.rs  test_binary_subprocess_benchmark.rs  test_bitmap_register_validity.rs  test_bug_fixes_verification.rs  test_cache_integration.rs  test_cli_daemon_integration.rs  test_compare_pure_execution.sh  test_compare_pure_execution_simple.sh  test_compiler_benchmarks.rs  test_conflict_resolution_cargo_lock.rs  test_conflict_resolution_daemon_client.rs  test_conflict_resolution_profiling.rs  test_conflict_resolution_vm_body_len.rs  test_cpython_comparison.rs  test_cpython_pure_execution_benchmark.rs  test_cross_conflict_integration.rs  test_cross_feature_integration.rs  test_daemon_cache_integration.rs  test_daemon_cli_cache_interaction.rs  test_daemon_cli_integration_simple.rs  test_daemon_client_integration.rs  test_daemon_client_server_integration.rs  test_daemon_concurrency.rs  test_daemon_edge_cases.sh  test_daemon_error_propagation_integration.rs  test_daemon_fallback.rs  test_daemon_fallback.sh  test_daemon_lifecycle.sh  test_daemon_mode_benchmark.rs  test_daemon_mode_edge_cases.rs  test_daemon_profiling_separation.rs  test_daemon_race_condition.sh  (+33 more)
af-deep-research-main/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  doc_generation_pipeline.py  docker-compose.hub.yml  docker-compose.yml  main.py  pyproject.toml  temporal_context.py  utils.py
af-deep-research-main/reasoners/: __init__.py  dynamic_infrastructure.py  dynamic_models.py  example_reasoner.py  meta_reasoners.py  research_orchestrator.py  universal_reasoners.py
af-deep-research-main/skills/: __init__.py  example_skill.py  jina_search.py
af-deep-research-main/skills/search/: __init__.py  base.py  firecrawl.py  jina.py  registry.py  serper.py  tavily.py
af-deep-research-main/tests/: test_agent.py
configs/: system_config.yaml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
evaluation/: __init__.py  benchmark_corpus.json  benchmark_runner.py  metrics_reporter.py  report_generator.py
sec-af-main/: Dockerfile  README.md  pyproject.toml
src/: sitecustomize.py
(+476 files in other folders)
