[package]
name = "diagrams"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Diagrams Team"]
description = "A command-line tool for creating architecture diagrams from DSL"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
insta = "1.34"
tempfile = "3.8"
toml = "0.8"

[profile.release]
lto = true
strip = true
codegen-units = 1
