[package]
name = "pyrust"
version = "0.1.0"
edition = "2021"

[features]
dhat-heap = []

[dependencies]
lazy_static = "1.4"
signal-hook = "0.3"
libc = "0.2"

[dev-dependencies]
criterion = "0.5"
serde_json = "1.0"
pyo3 = { version = "0.25", features = ["auto-initialize"] }
dhat = "0.3"

[[bench]]
name = "startup_benchmarks"
harness = false

[[bench]]
name = "cpython_baseline"
harness = false

[[bench]]
name = "execution_benchmarks"
harness = false

[[bench]]
name = "function_call_overhead"
harness = false

[[bench]]
name = "cpython_pure_execution"
harness = false

[[bench]]
name = "lexer_benchmarks"
harness = false

[[bench]]
name = "vm_benchmarks"
harness = false


[[bench]]
name = "compiler_benchmarks"
harness = false

[[bench]]
name = "parser_benchmarks"
harness = false

[[bench]]
name = "cache_performance"
harness = false

[[bench]]
name = "profiling_overhead"
harness = false

[[bench]]
name = "binary_subprocess"
harness = false

[[bench]]
name = "daemon_mode"
harness = false

[profile.release]
# Fat LTO for maximum optimization across all crates
lto = "fat"
# Single codegen unit for better optimization (at cost of compile time)
codegen-units = 1
# Strip symbols to reduce binary size
strip = true
# Abort on panic to avoid unwinding overhead
panic = "abort"
# Maximum optimization level
opt-level = 3
